using System;
using System.Collections.Generic;
using System.Collections.ObjectModel;
using System.Linq;
using System.Text;
using System.Threading.Tasks;
using Microsoft.Data.SqlClient;

namespace Models.Repository
{
    public class PersonRepository : IRepository<Person>
    {
        public ObservableCollection<Person> _persons = new ObservableCollection<Person>();

        private readonly string _connectionString;
        public PersonRepository(string connectionString)
        {
            _connectionString = connectionString ?? throw new ArgumentNullException(nameof(connectionString));
        }

        public int Add(Person person)
        {
            string query = @"
                INSERT INTO PERSON (Name, Email, Phone)
                VALUES (@Name, @Email, @Phone);
                SELECT CAST(SCOPE_IDENTITY() AS int);";

            using (SqlConnection connection = new SqlConnection(_connectionString))
            using (SqlCommand command = new SqlCommand(query, connection))
            {
                command.Parameters.AddWithValue("@Name", person.Name);
                command.Parameters.AddWithValue("@Email", person.Email);
                command.Parameters.AddWithValue("@Phone", person.Phone);

                connection.Open();
                int newId = (int)command.ExecuteScalar();
                return newId;
            }
        }

        public IEnumerable<Person> GetAll()
        {
            var persons = new List<Person>();
            string query = "SELECT * FROM Person";

            using (SqlConnection connection = new SqlConnection(_connectionString))
            {
                SqlCommand command = new SqlCommand(query, connection);
                connection.Open();
                using (SqlDataReader reader = command.ExecuteReader())
                {
                    while (reader.Read())
                    {
                        persons.Add(new Person(
                            (int)reader["PersonId"],
                            (string)reader["Name"],
                            (string)reader["Email"],
                            (string)reader["Phone"]
                         ));
                    }
                }
            }
            return persons;
        }

        public Person GetById(int id)
        {
            return _persons.FirstOrDefault(p => p.Id == id);
        }

        public void Update(Person person)
        {
            // update person to database
            string query = @"
                UPDATE Person
                SET Name = @Name, Email = @Email, Phone = @Phone
                WHERE PersonId = @PersonId;";
            using (SqlConnection connection = new SqlConnection(_connectionString))
                using (SqlCommand command = new SqlCommand(query, connection))
            {
                command.Parameters.AddWithValue("@Name", person.Name);
                command.Parameters.AddWithValue("@Email", person.Email);
                command.Parameters.AddWithValue("@Phone", person.Phone);
                command.Parameters.AddWithValue("@PersonId", person.Id);
                connection.Open();
                command.ExecuteNonQuery();
            }
        }

        public void Delete(int id)
        {
            string query = @"DELETE from Person WHERE PersonId = @PersonId;";
            using (SqlConnection connection = new SqlConnection(_connectionString))
            using (SqlCommand command = new SqlCommand(query, connection))
            {
                command.Parameters.AddWithValue("@PersonId", id);
                connection.Open();
                command.ExecuteNonQuery();
            }
        }
    }
}
